# pybodlib

./: README.md  setup.cfg
notebooks/: create-netcdf.ipynb  resample-glcc.ipynb
pybodlib/: glcc.py  transform.py  utils.py
